--- a/tests/integration-tests/tests/cli_commands/test_cli_commands/test_slurm_cli_commands/pcluster.config.with.warnings.yaml
+++ b/tests/integration-tests/tests/cli_commands/test_cli_commands/test_slurm_cli_commands/pcluster.config.with.warnings.yaml
@@ -9,7 +9,7 @@ HeadNode:  # Head Node section without a KeyName will generate an warning
     Secured: {{ imds_secured }}
 Scheduling:
   Scheduler: {{ scheduler }}
-  SlurmQueues:
+  {{ scheduler_prefix }}Queues:
     - Name: ondemand1
       Networking:
         SubnetIds:
