--- a/tests/integration-tests/tests/cli_commands/test_cli_commands/test_slurm_cli_commands/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cli_commands/test_cli_commands/test_slurm_cli_commands/pcluster.config.yaml
@@ -10,9 +10,14 @@ HeadNode:
     Secured: {{ imds_secured }}
 Scheduling:
   Scheduler: {{ scheduler }}
-  SlurmSettings:
+  {{ scheduler_prefix }}Settings:
+    {% if scheduler == "plugin" %}
+    CustomSettings:
+      ScaledownIdletime: {{ scaledown_idletime }}
+    {% else %}
     ScaledownIdletime: {{ scaledown_idletime }}
-  SlurmQueues:
+    {% endif %}
+  {{ scheduler_prefix }}Queues:
     - Name: ondemand1
       Networking:
         SubnetIds:
