Do not grant system users sudo privileges in case GrantSudoPrivileges is set to false
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
@@ -9,6 +9,7 @@ HeadNode:
 Scheduling:
   Scheduler: plugin
   SchedulerSettings:
+    GrantSudoPrivileges: true
     SchedulerDefinition:
       PluginInterfaceVersion: "1.0"
       Events:
