--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
@@ -9,6 +9,7 @@ HeadNode:
 Scheduling:
   Scheduler: plugin
   SchedulerSettings:
+    GrantSudoPrivileges: true
     SchedulerDefinition:
       PluginInterfaceVersion: "1.0"
       Events:
