Make test_scheduler_plugin_integration compatible with ubuntu18
Signed-off-by: Francesco De Martino <fdm@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
@@ -86,7 +86,7 @@ Scheduling:
           SudoerConfiguration:
             - Commands: ALL
               RunAs: root
-            - Commands: /usr/bin/ls, /usr/bin/touch
+            - Commands: /bin/ls, /usr/bin/touch
               RunAs: {{ run_as_user }}
         - Name: {{ user2 }}
           EnableImds: true
