Make test_scheduler_plugin_integration compatible with ubuntu18
Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.yaml
@@ -91,7 +91,7 @@ Scheduling:
         - Name: {{ user2 }}
           EnableImds: true
           SudoerConfiguration:
-            - Commands: /usr/bin/ls
+            - Commands: /bin/ls
               RunAs: root
       Tags:
         - Key: SchedulerPluginTag
