Remove Torque and SGE references from additional files
* Removed SGE/Torque deprecation message and validator
* Remove from unit tests files
* Remove SIT update specific tests
* Rename test_update_hit to test_update_slurm
* Modify test_scheduler_validator assertion to verify sge and torque are not supported

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/src/pcluster/examples/config
+++ b/cli/src/pcluster/examples/config
@@ -47,8 +47,8 @@ key_name = mykey
 # Maximum number of vcpus that can be launched when scheduler is awsbatch.
 #max_vcpus = 20
 # Cluster scheduler
-# (defaults to sge)
-#scheduler = sge
+# (defaults to slurm)
+#scheduler = slurm
 # Type of cluster to launch i.e. ondemand or spot
 # (defaults to ondemand)
 #cluster_type = ondemand
