--- a/cli/tests/pcluster/config/test_section_cluster/test_sit_cluster_from_file_to_cfn/pcluster.config.ini
+++ b/cli/tests/pcluster/config/test_section_cluster/test_sit_cluster_from_file_to_cfn/pcluster.config.ini
@@ -14,7 +14,7 @@ aws_region_name = us-east-2
 
 # Test: all default values
 [cluster default]
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 # Test: all custom values
@@ -22,7 +22,7 @@ base_os = alinux2
 key_name = key
 template_url = https://template
 base_os = ubuntu1804
-scheduler = sge
+scheduler = slurm
 shared_dir = /test
 placement_group = NONE
 placement = cluster
@@ -123,9 +123,9 @@ base_os = alinux2
 [cw_log batch-no-cw-logging]
 enable = false
 
-# Test: mixed awsbatch and traditional scheduler params with sge scheduler
+# Test: mixed awsbatch and traditional scheduler params with slurm scheduler
 [cluster wrong_mix_traditional]
-scheduler = sge
+scheduler = slurm
 cluster_type = spot
 initial_queue_size = 1
 max_queue_size = 2
@@ -157,7 +157,7 @@ base_os = alinux2
 [cluster ebs]
 vpc_settings = default
 ebs_settings = ebs1
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 # Test: multiple ebs settings
@@ -165,7 +165,7 @@ base_os = alinux2
 vpc_settings = default
 shared_dir = /work
 ebs_settings = ebs1,ebs2
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 # Test: default shared_dir = /shared is used
@@ -173,7 +173,7 @@ base_os = alinux2
 [cluster ebs-shareddir-cluster1]
 vpc_settings = default
 ebs_settings = ebsnodir
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 # Test: shared_dir from cluster section is used
@@ -182,7 +182,7 @@ base_os = alinux2
 vpc_settings = default
 shared_dir = /work
 ebs_settings = ebsnodir
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 # Test: shared_dir from ebs section is used
@@ -191,7 +191,7 @@ base_os = alinux2
 vpc_settings = default
 shared_dir = /work
 ebs_settings = ebs1
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 [ebs ebs1]
@@ -220,7 +220,7 @@ encrypted = false
 [cluster efs]
 vpc_settings = default
 efs_settings = default
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 [efs default]
@@ -230,7 +230,7 @@ shared_dir = efs
 [cluster dcv]
 vpc_settings = default
 dcv_settings = default
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 [dcv default]
@@ -247,7 +247,7 @@ efs_settings = default
 raid_settings = default
 fsx_settings = default
 dcv_settings = default
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 [scaling scaling]
@@ -271,7 +271,7 @@ dcv_settings = default
 key_name = key
 template_url = https://template
 base_os = ubuntu1804
-scheduler = sge
+scheduler = slurm
 shared_dir = /test
 placement_group = NONE
 placement = cluster
@@ -306,7 +306,7 @@ enable_intel_hpc_platform = false
 # test: cw_log settings
 [cluster cw_log]
 cw_log_settings = cw_log
-scheduler = sge
+scheduler = slurm
 base_os = alinux2
 
 [cw_log cw_log]
