--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_filtered_subnets_by_az/original_config_file.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_filtered_subnets_by_az/original_config_file.ini
@@ -4,7 +4,7 @@ aws_region_name = eu-west-1
 [cluster default]
 key_name = key3
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 master_instance_type = t2.nano
 compute_instance_type = t2.large
 max_queue_size = 14
