--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_region_env_overwrite_region_config/original_config_file.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_region_env_overwrite_region_config/original_config_file.ini
@@ -4,7 +4,7 @@ aws_region_name = config_region_name_to_be_overwritten
 [cluster default]
 key_name = key3
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 base_os = alinux2
 
 [vpc default]
