--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_region_env_overwrite_region_config/pcluster.config.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_region_env_overwrite_region_config/pcluster.config.ini
@@ -4,10 +4,10 @@ aws_region_name = eu-west-1
 [cluster default]
 key_name = key3
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 base_os = alinux2
 master_instance_type = t2.micro
-compute_instance_type = t2.micro
+queue_settings = compute
 
 [vpc default]
 vpc_id = vpc-12345678
@@ -21,3 +21,10 @@ sanity_check = true
 
 [aliases]
 ssh = ssh {CFN_USER}@{MASTER_IP} {ARGS}
+
+[queue compute]
+enable_efa = false
+compute_resource_settings = default
+
+[compute_resource default]
+instance_type = t2.micro
