--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_no_automation_no_awsbatch_no_errors/pcluster.config.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_no_automation_no_awsbatch_no_errors/pcluster.config.ini
@@ -4,13 +4,10 @@ aws_region_name = eu-west-1
 [cluster default]
 key_name = key1
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 master_instance_type = t2.nano
-compute_instance_type = t2.micro
-max_queue_size = 14
-initial_queue_size = 13
-maintain_initial_size = true
 base_os = alinux2
+queue_settings=compute
 
 [vpc default]
 vpc_id = vpc-12345678
@@ -25,3 +22,11 @@ sanity_check = true
 [aliases]
 ssh = ssh {CFN_USER}@{MASTER_IP} {ARGS}
 
+[queue compute]
+enable_efa = false
+compute_resource_settings = default
+
+[compute_resource default]
+instance_type = t2.micro
+min_count = 13
+max_count = 14
