--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_no_input_no_automation_no_errors_with_config_file/pcluster.config.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_no_input_no_automation_no_errors_with_config_file/pcluster.config.ini
@@ -4,14 +4,11 @@ aws_region_name = eu-west-1
 [cluster default]
 key_name = key3
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 master_instance_type = t2.nano
-compute_instance_type = t2.nano
-max_queue_size = 14
-initial_queue_size = 13
-maintain_initial_size = true
 base_os = alinux2
 extra_json = {"cluster": {"key": "value"}}
+queue_settings = compute
 
 [vpc default]
 vpc_id = vpc-12345678
@@ -25,3 +22,12 @@ sanity_check = true
 
 [aliases]
 ssh = ssh {CFN_USER}@{MASTER_IP} {ARGS}
+
+[queue compute]
+enable_efa = false
+compute_resource_settings = default
+
+[compute_resource default]
+instance_type = t2.nano
+min_count = 13
+max_count = 14
