--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_subnet_automation_no_awsbatch_no_errors_empty_vpc/pcluster.config.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_subnet_automation_no_awsbatch_no_errors_empty_vpc/pcluster.config.ini
@@ -4,13 +4,10 @@ aws_region_name = eu-west-1
 [cluster default]
 key_name = key1
 vpc_settings = default
-scheduler = sge
+scheduler = slurm
 base_os = centos7
-compute_instance_type = t2.micro
 master_instance_type = t2.nano
-max_queue_size = 14
-initial_queue_size = 13
-maintain_initial_size = true
+queue_settings = compute
 
 [vpc default]
 vpc_id = vpc-23456789
@@ -25,4 +22,13 @@ sanity_check = true
 
 [aliases]
 ssh = ssh {CFN_USER}@{MASTER_IP} {ARGS}
+
+[queue compute]
+enable_efa = false
+compute_resource_settings = default
+
+[compute_resource default]
+instance_type = t2.micro
+min_count = 13
+max_count = 14
 
