--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_with_input_no_automation_no_errors_with_config_file/original_config_file.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_with_input_no_automation_no_errors_with_config_file/original_config_file.ini
@@ -5,7 +5,7 @@ aws_region_name = eu-west-1
 key_name = key1
 base_os = ubuntu1804
 vpc_settings = default
-scheduler = torque
+scheduler = slurm
 master_instance_type = t2.nano
 compute_instance_type = t2.micro
 max_queue_size = 14
