--- a/cli/tests/pcluster/configure/test_pcluster_configure/test_with_region_arg_with_config_file/pcluster.config.ini
+++ b/cli/tests/pcluster/configure/test_pcluster_configure/test_with_region_arg_with_config_file/pcluster.config.ini
@@ -12,15 +12,21 @@ sanity_check = true
 [cluster default]
 key_name = key1
 base_os = alinux2
-scheduler = torque
+scheduler = slurm
 master_instance_type = t2.nano
-compute_instance_type = t2.micro
 vpc_settings = default
-initial_queue_size = 13
-max_queue_size = 14
-maintain_initial_size = true
+queue_settings = compute
 
 [vpc default]
 vpc_id = vpc-12345678
 master_subnet_id = subnet-12345678
 compute_subnet_id = subnet-23456789
+
+[queue compute]
+enable_efa = false
+compute_resource_settings = default
+
+[compute_resource default]
+instance_type = t2.micro
+min_count = 13
+max_count = 14
