--- a/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
@@ -271,3 +271,6 @@ DevSettings:
     - Key: tag2
       Value: value2
     Owner: self
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1201  # Default 1800 (seconds)
+    ComputeNodeBootstrapTimeout: 1001  # Default 1800 (seconds)
