--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_intel_packages/awsbatch.disabled.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_intel_packages/awsbatch.disabled.yaml
@@ -23,3 +23,7 @@ Scheduling:
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
+DevSettings:
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1000
+    ComputeNodeBootstrapTimeout: 1200
