--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_intel_packages/slurm.disabled.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_intel_packages/slurm.disabled.yaml
@@ -19,3 +19,7 @@ Scheduling:
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
+DevSettings:
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1000
+    ComputeNodeBootstrapTimeout: 1200
