Add support for NEW_CHANGED_DELETED FSx import policy
* Extended unit tests to verify the new value is supported
* Extended test_fsx_lustre integration test to verify deleted files are removed as expected.

## References

Official doc: https://docs.aws.amazon.com/fsx/latest/APIReference/API_DataRepositoryConfiguration.html

NEW_CHANGED_DELETED - AutoImport is on. Amazon FSx automatically imports file and directory
listings of any new objects added to the S3 bucket, any existing objects that are changed in the S3 bucket,
and any objects that were deleted in the S3 bucket.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/cli/tests/pcluster/cli/test_configuration_converter/test_pcluster3_configuration_converter/missing_vpc.ini
+++ b/cli/tests/pcluster/cli/test_configuration_converter/test_pcluster3_configuration_converter/missing_vpc.ini
@@ -80,7 +80,7 @@ fsx_kms_key_id = xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 per_unit_storage_throughput = 200
 storage_type = SSD
 drive_cache_type = READ
-auto_import_policy = NEW_CHANGED
+auto_import_policy = NEW_CHANGED_DELETED
 
 [scaling custom]
 scaledown_idletime = 10
