--- a/cli/tests/pcluster/example_configs/awsbatch.full.yaml
+++ b/cli/tests/pcluster/example_configs/awsbatch.full.yaml
@@ -105,7 +105,7 @@ SharedStorage:
       #BackupId: backup-12345678  # BackupId cannot coexist with some of the fields
       KmsKeyId: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
       #FileSystemId: fs-12345678123456789  # FileSystemId cannot coexist with other fields
-      AutoImportPolicy: NEW_CHANGED  # NEW | NEW_CHANGED
+      AutoImportPolicy: NEW_CHANGED_DELETED  # NEW | NEW_CHANGED | NEW_CHANGED_DELETED
       DriveCacheType: READ  # READ
       StorageType: HDD  # HDD | SSD
 Iam:
