Add BucketOwner and Checksum for SchedulerDefinition
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/scheduler_plugins/plugin_template/examples/cluster_configuration.yaml
+++ b/scheduler_plugins/plugin_template/examples/cluster_configuration.yaml
@@ -10,6 +10,8 @@ Scheduling:
   Scheduler: plugin
   SchedulerSettings:
     SchedulerDefinition: <PLUGIN_DEFINITION>
+#    SchedulerDefinitionS3BucketOwner: <ACCOUNT_ID>
+    SchedulerDefinitionChecksum: <PLUGIN_DEFINITION_CHECKSUM>
     GrantSudoPrivileges: true
     CustomSettings:
       CustomKey1: CustomValue1
