Integ-tests: Use smaller active directories
AWS Managed Microsoft AD (Standard Edition) includes 1 GB of directory object storage. This capacity can support up to 5,000 users or 30,000 directory objects, including users, groups, and computers. AWS Managed Microsoft AD (Enterprise Edition) includes 17 GB of directory object storage, which can support up to 100,000 users or 500,000 objects.

Small Simple AD can have up to 2000 objects, including ~500 users, groups and computers each. Simple AD can have up to 20,000 objects, including ~5000 users, groups and computers each.

Using smaller ADs in the test does not only save cost, but make potential performance issue easier to be discovered.

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/ad_stack.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/ad_stack.yaml
@@ -40,7 +40,10 @@ Resources:
         VpcId:
           Ref: Vpc
       {% if directory_type == "SimpleAD" %}
-      Size: Large
+      Size: Small
+      {% endif %}
+      {% if directory_type == "MicrosoftAD" %}
+      Edition: Standard
       {% endif %}
       ShortName: {{ ad_domain_short_name }}
   AdDomainAdminNodeWaitConditionHandle:
