--- a/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
@@ -15,7 +15,7 @@ Scheduling:
     - Name: efa-enabled
       Networking:
         PlacementGroup:
-          Enabled: true
+          Enabled: {{ 'true' if instance != "p4d.24xlarge" else 'false' }}
         SubnetIds:
           - {{ private_subnet_id }}
       ComputeResources:
