Execute OSU benchmarks on 32 nodes
Fix scripts to submit OSU benchmarks:
* Verbose debugging
* Print env
* Force slurm as bootstrap mechanism for mpirun
* Remove round robin scheduling from mpirun submission

Relevant notes:
* Intel MPI is shipped with an internal Libfabric (1.10.1-impi for Intel MPI 2019, and 1.13.0-impi for Intel MPI 2021).
* Libfabric >1.12 fixed an issue with FI_DELIVERY_COMPLETE: ofiwg/libfabric#6092 and this fix causes worst performances, for this reason we decided to use 3.1.1 results as baseline.

Disabled multithreading for x86 tests only

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
+++ b/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
@@ -15,6 +15,7 @@ queue_settings = efa-enabled
 [queue efa-enabled]
 compute_resource_settings = efa-enabled_i1
 enable_efa = true
+disable_hyperthreading = {{ multithreading_disabled }}
 {% if instance != "p4d.24xlarge" %}
 # placement group cannot be used for p4d because we have PG/ODCR
 placement_group = DYNAMIC
