--- a/tests/integration-tests/configs/ad_integration.yaml
+++ b/tests/integration-tests/configs/ad_integration.yaml
@@ -10,7 +10,7 @@ test-suites:
           schedulers: ["slurm"]
           benchmarks:
             - mpi_variants: ["openmpi"]
-              num_of_instances: [100]
+              num_instances: [100]
               osu_benchmarks:
                 # Available collective benchmarks "osu_allgather", "osu_allreduce", "osu_alltoall", "osu_barrier", "osu_bcast", "osu_gather", "osu_reduce", "osu_reduce_scatter", "osu_scatter"
                 collective: ["osu_allreduce", "osu_alltoall"]
