--- a/scheduler_plugins/slurm/examples/cluster_configuration.yaml
+++ b/scheduler_plugins/slurm/examples/cluster_configuration.yaml
@@ -3,9 +3,9 @@ Image:
 HeadNode:
   InstanceType: c5.2xlarge
   Ssh:
-    KeyName: fdm-jenkins
+    KeyName: <KEY_NAME>
   Networking:
-    SubnetId: subnet-054c929102b5e4c47
+    SubnetId: <HEAD_SUBNET>
 Scheduling:
   Scheduler: plugin
   SchedulerSettings:
@@ -20,7 +20,7 @@ Scheduling:
       CapacityType: ONDEMAND
       Networking:
         SubnetIds:
-          - subnet-0a94506a608268ef3
+          - <COMPUTE_SUBNET>
       ComputeResources:
         - Name: computeresource1
           InstanceType: c5.xlarge
@@ -29,10 +29,7 @@ Scheduling:
       CapacityType: SPOT
       Networking:
         SubnetIds:
-          - subnet-0a94506a608268ef3
+          - <COMPUTE_SUBNET>
       ComputeResources:
         - Name: computeresource1
           InstanceType: c5.xlarge
-DevSettings:
-  AmiSearchFilters:
-    Owner: '447714826191'
