--- a/cli/tests/pcluster/example_configs/scheduler_plugin.required.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.required.yaml
@@ -11,6 +11,9 @@ Scheduling:
   SchedulerSettings:
     SchedulerDefinition:
       PluginInterfaceVersion: "1.0"
+      Metadata:
+        Version: 1.0.0
+        Name: my-scheduler
       Events:
         HeadInit:
           ExecuteCommand:
