--- a/cli/tests/pcluster/templates/test_cluster_stack/test_scheduler_plugin_substack/scheduler-plugin-without-template.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_scheduler_plugin_substack/scheduler-plugin-without-template.yaml
@@ -12,6 +12,10 @@ Scheduling:
   SchedulerSettings:
     SchedulerDefinition:
       PluginInterfaceVersion: "1.0"
+      Metadata:
+        Version: 1.0.0
+        Name: my-scheduler
+        Documentation: link
       Events:
         HeadInit:
           ExecuteCommand:
