--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
@@ -12,6 +12,10 @@ Scheduling:
     GrantSudoPrivileges: true
     SchedulerDefinition:
       PluginInterfaceVersion: "1.0"
+      Metadata:
+        Version: 1.0.0
+        Name: my-scheduler
+        Documentation: link
       Events:
         HeadInit:
           ExecuteCommand:
