--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.ini
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.update.ini
@@ -8,7 +8,7 @@ aws_region_name = {{ region }}
 base_os = {{ os }}
 key_name = {{ key_name }}
 
-scheduler = {{ scheduler }}
+scheduler = slurm
 master_instance_type = {{ instance }}
 s3_read_resource = arn:aws:s3:::{{ bucket }}/scripts/*
 s3_read_write_resource = arn:aws:s3:::{{ bucket }}/tmp/*
