--- a/tests/integration-tests/tests/update/test_update/test_update_awsbatch/pcluster.config.ini
+++ b/tests/integration-tests/tests/update/test_update/test_update_awsbatch/pcluster.config.ini
@@ -8,7 +8,7 @@ aws_region_name = {{ region }}
 base_os = {{ os }}
 key_name = {{ key_name }}
 vpc_settings = parallelcluster-vpc
-scheduler = {{ scheduler }}
+scheduler = awsbatch
 master_instance_type = {{ instance }}
 min_vcpus= 1
 desired_vcpus= 2
