--- a/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.ini
+++ b/tests/integration-tests/tests/update/test_update/test_update_slurm/pcluster.config.ini
@@ -8,7 +8,7 @@ aws_region_name = {{ region }}
 base_os = {{ os }}
 key_name = {{ key_name }}
 
-scheduler = {{ scheduler }}
+scheduler = slurm
 master_instance_type = {{ instance }}
 #spot_price=1.50  # Disabled with cluster_type=ondemand
 s3_read_resource = arn:aws:s3:::fake_bucket/*
