Change config for test slurm compatible with scheduler-plugin
Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_pmix/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_pmix/pcluster.config.yaml
@@ -7,8 +7,8 @@ HeadNode:
   Ssh:
     KeyName: {{ key_name }}
 Scheduling:
-  Scheduler: slurm
-  SlurmQueues:
+  Scheduler: {{ scheduler }}
+  {{ scheduler_prefix }}Queues:
     - Name: ondemand
       CapacityType: ONDEMAND
       Networking:
