--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
@@ -12,8 +12,8 @@ HeadNode:
       - BucketName: {{ bucket }}
         EnableWriteAccess: true
 Scheduling:
-  Scheduler: slurm
-  SlurmQueues:
+  Scheduler: {{ scheduler }}
+  {{ scheduler_prefix }}Queues:
     - Name: broken
       Networking:
         SubnetIds:
