--- a/scheduler_plugins/slurm/plugin_definition.yaml
+++ b/scheduler_plugins/slurm/plugin_definition.yaml
@@ -11,11 +11,11 @@ Requirements:
   RequiresSudoPrivileges: true
 ClusterInfrastructure:
   CloudFormation:
-    Template: s3://<BUCKET>/scheduler_plugins/slurm/slurm_plugin_infrastructure.cfn.yaml
+    Template: s3://<BUCKET>/slurm_plugin_infrastructure.cfn.yaml
     Checksum: <TEMPLATE_CHECKSUM>
 PluginResources:
   ClusterSharedArtifacts:
-    - Source: s3://<BUCKET>/scheduler_plugins/slurm/artifacts.tar.gz
+    - Source: s3://<BUCKET>/artifacts.tar.gz
       Checksum: <ARTIFACTS_CHECKSUM>
 SystemUsers:
   - Name: slurm-user
