Add logic to support BYOS version bump
Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
@@ -11,7 +11,7 @@ Scheduling:
   SchedulerSettings:
     GrantSudoPrivileges: true
     SchedulerDefinition:
-      PluginInterfaceVersion: "1.0"
+      PluginInterfaceVersion: '{{ plugin_interface_version }}'
       Metadata:
         Version: 1.0.0
         Name: my-scheduler
