Re-enable p4d daily tests for 2.x
I'm disabling placement group to avoid conflicts with PG/ODCR
https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/cr-cpg.html

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
+++ b/tests/integration-tests/tests/efa/test_efa/test_hit_efa/pcluster.config.ini
@@ -15,7 +15,10 @@ queue_settings = efa-enabled
 [queue efa-enabled]
 compute_resource_settings = efa-enabled_i1
 enable_efa = true
+{% if instance != "p4d.24xlarge" %}
+# placement group cannot be used for p4d because we have PG/ODCR
 placement_group = DYNAMIC
+{% endif %}
 
 [compute_resource efa-enabled_i1]
 instance_type = {{ instance }}
