--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -217,6 +217,10 @@ efa:
         instances: ["c6gn.16xlarge"]
         oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
         schedulers: ["slurm"]
+      - regions: ["us-west-2"]
+        instances: ["p4d.24xlarge"]
+        oss: ["alinux2"]
+        schedulers: ["slurm"]
       - regions: ["us-east-2"]
         instances: [{{ common.instance("instance_type_1") }}]
         oss: ["alinux2", "centos7", "ubuntu2004"]
